[FIX] web: settings header's content out of screen  on smaller screen
Before this commit, the header used in the Website and Point of Sale's
Settings overflow to the right of the screen.

This commit is a workaround to circumvent the `.flex-nowrap` which
prevents the header's content to wrap to multiple lines when its content
doesn't fit the screen's width.

A proper fix will be implemented in master by reworking the Settings'
header DOM.

task-3102445

--- a/addons/web/static/src/webclient/settings_form_view/settings_form_view.scss
+++ b/addons/web/static/src/webclient/settings_form_view/settings_form_view.scss
@@ -195,6 +195,12 @@
 
            .app_settings_header {
                @include o-base-settings-horizontal-padding(0);
+
+               @include media-breakpoint-down(md) {
+                  .content-group .flex-nowrap {
+                     flex-wrap: wrap !important;
+                  }
+               }
            }
 
            .highlighter {
